output connective and split point, remove odd expressions, contract nucleus

--- a/project/aux/defs.ipynb
+++ b/project/aux/defs.ipynb
@@ -8,8 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "import abc\n",
-    "import enum\n",
     "import collections"
    ]
   },
@@ -26,9 +24,11 @@
     "    [\n",
     "        \"statement_text\",\n",
     "        \"nucleus\",\n",
+    "        \"connective\",\n",
     "        \"satellite_nucleus\",\n",
     "        \"left_boundary\",\n",
     "        \"right_boundary\",\n",
+    "        \"split_point\",\n",
     "        \"nucleus_proximity\",\n",
     "        \"rule\",\n",
     "        \"reason\"\n",
@@ -51,64 +51,6 @@
     "        \"explanation\"\n",
     "    ]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Rule(metaclass=abc.ABCMeta):\n",
-    "    @property\n",
-    "    @abc.abstractmethod\n",
-    "    def name(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @property\n",
-    "    @abc.abstractmethod\n",
-    "    def relation_type(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @property\n",
-    "    @abc.abstractmethod\n",
-    "    def reasons(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @abc.abstractmethod\n",
-    "    def generate_statement(self, text, relation, verbose):\n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# A template\n",
-    "#\n",
-    "# class TmpRule(Rule):\n",
-    "#     name = \"tmp rule\"\n",
-    "#     reasons = {\n",
-    "#         \"CONTAINS_BECAUSE\": Reason(1, \"Contains because\")\n",
-    "#     }\n",
-    "    \n",
-    "#     def generate_statement(self, text, relation, verbose):\n",
-    "#         return Statement(\n",
-    "#             \"\", \n",
-    "#             \"\", \n",
-    "#             \"\", \n",
-    "#             0, \n",
-    "#             0, \n",
-    "#             NucleusProximity.NEAR.value, \n",
-    "#             TmpRule.name, \n",
-    "#             TmpRule.reasons[\"CONTAINS_BECAUSE\"]\n",
-    "#         )"
    ]
   }
  ],
