--- a/project/aux/relation_extraction.ipynb
+++ b/project/aux/relation_extraction.ipynb
@@ -307,7 +307,20 @@
     "    with open(file_path, \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
-    "    return read_relation_tree(tree_text)"
+    "    return read_relation_tree(tree_text)\n",
+    "\n",
+    "\n",
+    "def load_relations(file_path):\n",
+    "    with open(file_path, \"rt\") as f:\n",
+    "        tree_text = f.read()\n",
+    "\n",
+    "    cleaned_tree_text = tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
+    "\n",
+    "    text, relations = read_relations(\n",
+    "        cleaned_tree_text\n",
+    "    )\n",
+    "    \n",
+    "    return text, relations, cleaned_tree_text"
    ]
   },
   {
