--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -291,6 +291,113 @@
     "        if other_s in s:\n",
     "            return True\n",
     "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_nn(relation):\n",
+    "    return (\n",
+    "        relation is not None\n",
+    "            and relation.left.type == \"N\"\n",
+    "            and relation.right.type == \"N\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing Jupyter notebook from relation_extraction.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_background(relation):\n",
+    "    return relation is not None and relation.type == \"Background\"\n",
+    "\n",
+    "\n",
+    "def has_nested_background(relation):\n",
+    "    return (\n",
+    "        relation is not None\n",
+    "        and\n",
+    "        (\n",
+    "            is_background(relation.left_child)\n",
+    "            or is_background(relation.right_child)\n",
+    "            or has_nested_background(relation.left_child)\n",
+    "            or has_nested_background(relation.right_child)\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
+    "    \n",
+    "    import import_ipynb\n",
+    "    import relation_extraction\n",
+    "    \n",
+    "    def test__has_nested_background():\n",
+    "        r010 = relation_extraction.Relation(\"Background\", None, None, None, None)\n",
+    "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
+    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "\n",
+    "        assert has_nested_background(r0)\n",
+    "\n",
+    "        r010 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
+    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "\n",
+    "        assert has_nested_background(r0) is False\n",
+    "\n",
+    "        r010 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
+    "        r01  = relation_extraction.Relation(\"Background\", None, None, r010, r011)\n",
+    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "\n",
+    "        assert has_nested_background(r0)\n",
+    "\n",
+    "        assert has_nested_background(None) is False\n",
+    "\n",
+    "\n",
+    "    test__has_nested_background()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fix_quotes(sent):\n",
+    "#     stripped = sent.strip()\n",
+    "#     if len(stripped) > 0 and stripped[0] in {\"'\", '\"', '`'}:\n",
+    "#         return '\"' + stripped.strip(\"'\\\"`\") + '\"'\n",
+    "#     else:\n",
+    "#         return sent\n",
+    "    assert sent is not None\n",
+    "    return '\"' + sent.strip(\"'\\\"`\") + '\"'"
    ]
   }
  ],
