--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,14 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from preparation.ipynb\n"
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
+      "importing Jupyter notebook from preparation.ipynb\n",
+      "importing Jupyter notebook from rule_base.ipynb\n"
      ]
     }
    ],
@@ -43,12 +48,13 @@
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
     "from aux import defs\n",
-    "import preparation"
+    "import preparation\n",
+    "import rule_base"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -249,13 +255,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class RuleExplanation01(defs.Rule):\n",
+    "class RuleExplanation01(rule_base.Rule):\n",
     "    name = \"explanation_01\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
@@ -285,7 +289,7 @@
     "            )\n",
     "    }\n",
     "    \n",
-    "    def generate_statement(self, text, relation, verbose=False):\n",
+    "    def generate_statement(self, text, relation, verbose=False, **kwargs):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
     "        info = preparation.Preprocessor.prepare_extended_info(\n",
     "            text, relation, verbose\n",
@@ -358,26 +362,20 @@
     "\n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
-    "            \n",
-    "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
+    "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
+    "                info.nucleus_preparation_result.prepared_text,\n",
+    "                augmented_sn_text,\n",
+    "                verbose\n",
     "            )\n",
-    "            processed_sn_text = nlp.remove_leading_words(augmented_sn_text, verbose)\n",
-    "            prepared_sn_text = utils.lowercase_first_letter(\n",
-    "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.satellite_preparation_result.prepared_text\n",
-    "            )\n",
-    "            \n",
-    "            statement_text = f\"{prepared_nucleus_text} because {prepared_sn_text}\"\n",
-    "            return defs.Statement(\n",
-    "                statement_text=statement_text,\n",
-    "                nucleus=prepared_nucleus_text,\n",
-    "                satellite_nucleus=prepared_sn_text,\n",
-    "                left_boundary=relation.left.start,\n",
-    "                right_boundary=relation.right.end,\n",
-    "                nucleus_proximity=info.nucleus_proximity.value,\n",
-    "                rule=self.name,\n",
-    "                reason=reason\n",
+    "            return self._generate_statement(\n",
+    "                final_nucleus_text, \n",
+    "                \" because \", \n",
+    "                final_sn_text, \n",
+    "                relation, \n",
+    "                info.nucleus_proximity.value,\n",
+    "                self.name,\n",
+    "                reason,\n",
+    "                verbose\n",
     "            )\n",
     "        else:\n",
     "            utils.print_if_verbose(\"None of the conditions were met.\", verbose)\n",
@@ -386,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +393,7 @@
      "text": [
       "I 'm often there for three hours .  It makes me feel great to do something for the environment .  \n",
       "Nucleus is on the left.\n",
-      "Nucleus's depth <= 3.\n",
+      "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the right.\n",
@@ -410,7 +408,11 @@
       "It makes me feel great to do something for the environment.\n",
       "ItMakesParseResult(success=True, subject='I', verb='feel', rest='great to do something for the environment .')\n",
       "Satellite's nucleus starts with 'It makes/made'.\n",
-      "Removing tokens before the first NP:\n",
+      "Taking the last sentence and resolving pronouns:\n",
+      "I'm often there for three hours. \n",
+      "---> \n",
+      "I'm often there for three hours.\n",
+      "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
       "  (S\n",
@@ -432,9 +434,11 @@
       "{\n",
       "  \"statement_text\": \"I'm often there for three hours because I feel great to do something for the environment.\",\n",
       "  \"nucleus\": \"I'm often there for three hours\",\n",
+      "  \"connective\": \" because \",\n",
       "  \"satellite_nucleus\": \"I feel great to do something for the environment.\",\n",
       "  \"left_boundary\": 1007,\n",
       "  \"right_boundary\": 1105,\n",
+      "  \"split_point\": 1043,\n",
       "  \"nucleus_proximity\": \"far\",\n",
       "  \"rule\": \"explanation_01\",\n",
       "  \"reason\": [\n",
