--- a/project/explanation_03.ipynb
+++ b/project/explanation_03.ipynb
@@ -36,7 +36,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
-      "importing Jupyter notebook from preparation.ipynb\n"
+      "importing Jupyter notebook from preparation.ipynb\n",
+      "importing Jupyter notebook from rule_base.ipynb\n"
      ]
     }
    ],
@@ -46,18 +47,17 @@
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
     "from aux import defs\n",
-    "import preparation"
+    "import preparation\n",
+    "import rule_base"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "class RuleExplanation03(defs.Rule):\n",
+    "class RuleExplanation03(rule_base.Rule):\n",
     "    name = \"explanation_03\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
@@ -81,11 +81,6 @@
     "                4,\n",
     "                \"Common pattern (Joint-Joint).\"\n",
     "            ),\n",
-    "        \"COMMON_PATTERN_-_ELABORATION\": \n",
-    "            defs.Reason(\n",
-    "                5,\n",
-    "                \"Common pattern ( -Elaboration).\"\n",
-    "            ),\n",
     "        \"COMMON_PATTERN_ELABORATION_JOINT\": \n",
     "            defs.Reason(\n",
     "                6,\n",
@@ -93,7 +88,7 @@
     "            )\n",
     "    }\n",
     "    \n",
-    "    def generate_statement(self, text, relation, verbose=False):\n",
+    "    def generate_statement(self, text, relation, verbose=False, **kwargs):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
     "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
@@ -141,11 +136,11 @@
     "                    if nucleus_subject == sn_subject:\n",
     "                        reason = self.reasons[\"NUCLEUS_AND_SN_HAVE_SAME_SUBJECT\"]\n",
     "                else:\n",
-    "                    print_if_verbose(\n",
+    "                    utils.print_if_verbose(\n",
     "                        \"Failed to find a subject in the satellite's nucleus.\", verbose\n",
     "                    )    \n",
     "            else:\n",
-    "                print_if_verbose(\n",
+    "                utils.print_if_verbose(\n",
     "                    \"Failed to find a subject in the nucleus.\", verbose\n",
     "                )\n",
     "            \n",
@@ -162,12 +157,6 @@
     "                verbose\n",
     "            )\n",
     "            if (\n",
-    "                info.nucleus_info.relation is None \n",
-    "                    and info.satellite_info.relation is not None\n",
-    "                    and info.satellite_info.relation.type == \"Elaboration\"\n",
-    "            ):\n",
-    "                reason = self.reasons[\"COMMON_PATTERN_-_ELABORATION\"]\n",
-    "            elif (\n",
     "                info.nucleus_info.relation is not None\n",
     "                    and info.satellite_info.relation is not None\n",
     "            ):\n",
@@ -184,27 +173,20 @@
     "\n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
-    "            \n",
-    "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
+    "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
+    "                info.nucleus_preparation_result.prepared_text,\n",
+    "                info.satellite_preparation_result.prepared_text,\n",
+    "                verbose\n",
     "            )\n",
-    "            processed_sn_text = nlp.remove_leading_words(\n",
-    "                info.satellite_preparation_result.prepared_text, verbose\n",
-    "            )\n",
-    "            prepared_sn_text = utils.lowercase_first_letter(\n",
-    "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.satellite_preparation_result.prepared_text\n",
-    "            )\n",
-    "            statement_text = f\"{prepared_nucleus_text}. Moreover {prepared_sn_text}\"\n",
-    "            return defs.Statement(\n",
-    "                statement_text=statement_text,\n",
-    "                nucleus=prepared_nucleus_text,\n",
-    "                satellite_nucleus=prepared_sn_text,\n",
-    "                left_boundary=relation.left.start,\n",
-    "                right_boundary=relation.right.end,\n",
-    "                nucleus_proximity=info.nucleus_proximity.value,\n",
-    "                rule=self.name,\n",
-    "                reason=reason\n",
+    "            return self._generate_statement(\n",
+    "                final_nucleus_text, \n",
+    "                \". Moreover \", \n",
+    "                final_sn_text, \n",
+    "                relation, \n",
+    "                info.nucleus_proximity.value,\n",
+    "                self.name,\n",
+    "                reason,\n",
+    "                verbose\n",
     "            )\n",
     "        else:\n",
     "            return None"
@@ -223,7 +205,7 @@
      "text": [
       "I then came to China , a country I had always wanted to visit .  I saw Beijing , of course , and climbed up the Great Wall .  \n",
       "Nucleus is on the left.\n",
-      "Nucleus's depth <= 3.\n",
+      "Nucleus's depth <= 100.\n",
       "Parsing result:\n",
       "(ROOT\n",
       "  (S\n",
@@ -351,7 +333,11 @@
       "Nucleus' subject is 'I'.\n",
       "The subject of satellite's nucleus is 'I'.\n",
       "Nucleus and satellite's nucleus have the same subject.\n",
-      "Removing tokens before the first NP:\n",
+      "Taking the last sentence and resolving pronouns:\n",
+      "I then came to China, a country I had always wanted to visit. \n",
+      "---> \n",
+      "I then came to China, a country I had always wanted to visit.\n",
+      "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
       "  (S\n",
@@ -365,15 +351,17 @@
       "        (, ,)))))\n",
       "I saw Beijing, of course, \n",
       "---> \n",
-      "I saw Beijing, of course,\n",
+      "I saw Beijing, of course.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"I then came to China, a country I had always wanted to visit. Moreover I saw Beijing, of course,\",\n",
+      "  \"statement_text\": \"I then came to China, a country I had always wanted to visit. Moreover I saw Beijing, of course.\",\n",
       "  \"nucleus\": \"I then came to China, a country I had always wanted to visit\",\n",
-      "  \"satellite_nucleus\": \"I saw Beijing, of course,\",\n",
+      "  \"connective\": \". Moreover \",\n",
+      "  \"satellite_nucleus\": \"I saw Beijing, of course.\",\n",
       "  \"left_boundary\": 571,\n",
       "  \"right_boundary\": 697,\n",
+      "  \"split_point\": 636,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_03\",\n",
       "  \"reason\": [\n",
