--- a/project/explanation_07.ipynb
+++ b/project/explanation_07.ipynb
@@ -36,7 +36,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
-      "importing Jupyter notebook from preparation.ipynb\n"
+      "importing Jupyter notebook from preparation.ipynb\n",
+      "importing Jupyter notebook from rule_base.ipynb\n"
      ]
     }
    ],
@@ -46,7 +47,8 @@
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
     "from aux import defs\n",
-    "import preparation"
+    "import preparation\n",
+    "import rule_base"
    ]
   },
   {
@@ -57,39 +59,18 @@
    },
    "outputs": [],
    "source": [
-    "def is_nn(relation):\n",
-    "    return (\n",
-    "        relation is not None\n",
-    "            and relation.left.type == \"N\"\n",
-    "            and relation.right.type == \"N\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class RuleExplanation07(defs.Rule):\n",
+    "class RuleExplanation07(rule_base.Rule):\n",
     "    name = \"explanation_07\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
-    "        \"COMMON_PATTERN_-_S=NN\": \n",
+    "        \"COMMON_PATTERN_N=NN_-\": \n",
     "            defs.Reason(\n",
     "                1,\n",
-    "                \"Common pattern ( -Satellite=NN).\"\n",
-    "            ),\n",
-    "        \"COMMON_PATTERN_S=NN_-\": \n",
-    "            defs.Reason(\n",
-    "                1,\n",
-    "                \"Common pattern (Satellite=NN- ).\"\n",
+    "                \"Common pattern (Nucleus=NN- ).\"\n",
     "            )\n",
     "    }\n",
     "    \n",
-    "    def generate_statement(self, text, relation, verbose=False):\n",
+    "    def generate_statement(self, text, relation, verbose=False, **kwargs):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
     "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
@@ -110,45 +91,27 @@
     "        reason = None\n",
     "        \n",
     "        if (\n",
-    "            info.nucleus_info.relation is None\n",
-    "                and is_nn(info.satellite_info.relation)\n",
-    "        ):\n",
-    "            reason = self.reasons[\"COMMON_PATTERN_-_S=NN\"]\n",
-    "        elif (\n",
     "            info.satellite_info.relation is None\n",
-    "                and is_nn(info.nucleus_info.relation)\n",
+    "                and utils.is_nn(info.nucleus_info.relation)\n",
     "        ):\n",
-    "            reason = self.reasons[\"COMMON_PATTERN_S=NN_-\"]\n",
+    "            reason = self.reasons[\"COMMON_PATTERN_N=NN_-\"]\n",
     "        \n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
-    "            \n",
-    "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
+    "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
+    "                info.nucleus_preparation_result.prepared_text,\n",
+    "                info.satellite_preparation_result.prepared_text,\n",
+    "                verbose\n",
     "            )\n",
-    "            processed_s_text = nlp.remove_leading_words(\n",
-    "                info.satellite_preparation_result.prepared_text, verbose\n",
-    "            )\n",
-    "#             processed_s_text = nlp.remove_leading_words(\n",
-    "#                 info.satellite_preparation_result.prepared_text, verbose\n",
-    "#             )\n",
-    "#             prepared_s_text = utils.lowercase_first_letter(\n",
-    "#                 processed_s_text if processed_s_text is not None \n",
-    "#                     else info.satellite_preparation_result.prepared_text\n",
-    "#             )\n",
-    "            prepared_s_text = utils.lowercase_first_letter(\n",
-    "                info.satellite_preparation_result.prepared_text\n",
-    "            )\n",
-    "            statement_text = f\"{prepared_nucleus_text} and {prepared_s_text}\"\n",
-    "            return defs.Statement(\n",
-    "                statement_text=statement_text,\n",
-    "                nucleus=prepared_nucleus_text,\n",
-    "                satellite_nucleus=prepared_s_text,\n",
-    "                left_boundary=relation.left.start,\n",
-    "                right_boundary=relation.right.end,\n",
-    "                nucleus_proximity=info.nucleus_proximity.value,\n",
-    "                rule=self.name,\n",
-    "                reason=reason\n",
+    "            return self._generate_statement(\n",
+    "                final_nucleus_text, \n",
+    "                \" and \", \n",
+    "                final_sn_text, \n",
+    "                relation, \n",
+    "                info.nucleus_proximity.value,\n",
+    "                self.name,\n",
+    "                reason,\n",
+    "                verbose\n",
     "            )\n",
     "        else:\n",
     "            return None"
@@ -156,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -167,50 +130,19 @@
      "text": [
       "The Boones traveled across Pennsylvania .  At last the family came to the green Yadkin Valley in North Carolina .  There were a few houses there already , but the farmland was much broader than that in Pennsylvania .  Father Boone said , \" This is good farmland .  We will stop here . \"  \n",
       "Nucleus is on the left.\n",
-      "Nucleus's depth <= 3.\n",
+      "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
       "At last the family came to the green Yadkin Valley in North Carolina.  There were a few houses there already, but the farmland was much broader than that in Pennsylvania.  Father Boone said, \" This is good farmland.  We will stop here. \"\n",
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Joint'.\n",
-      "Common pattern ( -Satellite=NN).\n",
-      "Removing tokens before the first NP:\n",
-      "-- syntactic parsing result\n",
-      " (ROOT\n",
-      "  (S\n",
-      "    (PP (IN At)\n",
-      "      (NP (JJ last)))\n",
-      "    (NP (DT the) (NN family))\n",
-      "    (VP (VBD came)\n",
-      "      (PP (TO to)\n",
-      "        (NP (DT the) (JJ green) (NNP Yadkin) (NNP Valley)))\n",
-      "      (PP (IN in)\n",
-      "        (NP (NNP North) (NNP Carolina))))\n",
-      "    (. .)))\n",
-      "At last the family came to the green Yadkin Valley in North Carolina.  There were a few houses there already, but the farmland was much broader than that in Pennsylvania.  Father Boone said, \" This is good farmland.  We will stop here. \" \n",
-      "---> \n",
-      "last the family came to the green Yadkin Valley in North Carolina. There were a few houses there already, but the farmland was much broader than that in Pennsylvania. Father Boone said, '' This is good farmland. We will stop here. ''\n",
       "\n",
-      "RESULT:\n",
-      "{\n",
-      "  \"statement_text\": \"The Boones traveled across Pennsylvania and at last the family came to the green Yadkin Valley in North Carolina.  There were a few houses there already, but the farmland was much broader than that in Pennsylvania.  Father Boone said, \\\" This is good farmland.  We will stop here. \\\"\",\n",
-      "  \"nucleus\": \"The Boones traveled across Pennsylvania\",\n",
-      "  \"satellite_nucleus\": \"at last the family came to the green Yadkin Valley in North Carolina.  There were a few houses there already, but the farmland was much broader than that in Pennsylvania.  Father Boone said, \\\" This is good farmland.  We will stop here. \\\"\",\n",
-      "  \"left_boundary\": 937,\n",
-      "  \"right_boundary\": 1225,\n",
-      "  \"nucleus_proximity\": \"near\",\n",
-      "  \"rule\": \"explanation_07\",\n",
-      "  \"reason\": [\n",
-      "    1,\n",
-      "    \"Common pattern ( -Satellite=NN).\"\n",
-      "  ]\n",
-      "}\n"
+      "RESULT:\n"
      ]
     }
    ],
@@ -236,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,59 +177,19 @@
      "text": [
       "After a short while , we can take our money from the slot at the bottom of the machine .  At last , if we do n't need other services , we can press the key for ending .  Then our cards will come out from the slot we put it in .  And we can finish our dealing and take the cards and money away .  \n",
       "Nucleus is on the left.\n",
-      "Nucleus's depth <= 3.\n",
+      "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
       "At last, if we do n't need other services, we can press the key for ending.  Then our cards will come out from the slot we put it in.  And we can finish our dealing and take the cards and money away.\n",
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Joint'.\n",
-      "Common pattern ( -Satellite=NN).\n",
-      "Removing tokens before the first NP:\n",
-      "-- syntactic parsing result\n",
-      " (ROOT\n",
-      "  (S\n",
-      "    (PP (IN At)\n",
-      "      (NP (JJ last)))\n",
-      "    (, ,)\n",
-      "    (SBAR (IN if)\n",
-      "      (S\n",
-      "        (NP (PRP we))\n",
-      "        (VP (VBP do) (RB n't)\n",
-      "          (VP (VB need)\n",
-      "            (NP (JJ other) (NNS services))))))\n",
-      "    (, ,)\n",
-      "    (NP (PRP we))\n",
-      "    (VP (MD can)\n",
-      "      (VP (VB press)\n",
-      "        (NP (DT the) (NN key))\n",
-      "        (PP (IN for)\n",
-      "          (S\n",
-      "            (VP (VBG ending))))))\n",
-      "    (. .)))\n",
-      "At last, if we do n't need other services, we can press the key for ending.  Then our cards will come out from the slot we put it in.  And we can finish our dealing and take the cards and money away. \n",
-      "---> \n",
-      "last, if we do n't need other services, we can press the key for ending. Then our cards will come out from the slot we put it in. And we can finish our dealing and take the cards and money away.\n",
       "\n",
-      "RESULT:\n",
-      "{\n",
-      "  \"statement_text\": \"After a short while, we can take our money from the slot at the bottom of the machine and at last, if we do n't need other services, we can press the key for ending.  Then our cards will come out from the slot we put it in.  And we can finish our dealing and take the cards and money away.\",\n",
-      "  \"nucleus\": \"After a short while, we can take our money from the slot at the bottom of the machine\",\n",
-      "  \"satellite_nucleus\": \"at last, if we do n't need other services, we can press the key for ending.  Then our cards will come out from the slot we put it in.  And we can finish our dealing and take the cards and money away.\",\n",
-      "  \"left_boundary\": 703,\n",
-      "  \"right_boundary\": 999,\n",
-      "  \"nucleus_proximity\": \"near\",\n",
-      "  \"rule\": \"explanation_07\",\n",
-      "  \"reason\": [\n",
-      "    1,\n",
-      "    \"Common pattern ( -Satellite=NN).\"\n",
-      "  ]\n",
-      "}\n"
+      "RESULT:\n"
      ]
     }
    ],
@@ -323,12 +215,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If you are not happy with China 's high Internet fees and slow speed , you are not alone.So is Premier Li Keqiang.On April 14 , he said in a meeting that the government should speed up the Internet and lower the fees .  \" The first question people ask at a new place is ' Is there WI-FI ' because Internet service fees are so high , \" said Premier Li.According to a recent survey by CCTV , the average cost of 1GB mobile Internet data per month in China is 100 Yuan , while it is only 60 Yuan in the US and 40 in Japan .  However , high prices do n't necessarily mean good service.The average Internet speed in China was 4.25 Mbps in late 2014 . South Korea had the fastest average Internet speed-25 .3 Mbps.People can download a 1 GB movie within 6 minutes in South Koreas , but in China it would take half an hour .  \n",
+      "Nucleus is on the left.\n",
+      "Nucleus's depth <= 100.\n",
+      "Nucleus's left subsegment is not nucleus.\n",
+      "Will use the whole segment.\n",
+      "Satellite's nucleus is on the left.\n",
+      "Nuclei proximity is NucleusProximity.NEAR\n",
+      "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
+      "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "\" The first question people ask at a new place is' Is there WI-FI' because Internet service fees are so high, \" said Premier Li.According to a recent survey by CCTV, the average cost of 1GB mobile Internet data per month in China is 100 Yuan, while it is only 60 Yuan in the US and 40 in Japan.  However, high prices do n't necessarily mean good service.The average Internet speed in China was 4.25 Mbps in late 2014. South Korea had the fastest average Internet speed-25.3 Mbps.People can download a 1 GB movie within 6 minutes in South Koreas, but in China it would take half an hour.\n",
+      "Nucleus relation type: 'Condition'.\n",
+      "Satellite relation type: 'Contrast'.\n",
+      "\n",
+      "RESULT:\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
+    "    rule = RuleExplanation07()\n",
+    "\n",
+    "    with open(\"../parsed/race/train/middle/5535.txt.tree\", \"rt\") as f:\n",
+    "        tree_text = f.read()\n",
+    "\n",
+    "    text, relations = relation_extraction.read_relations(\n",
+    "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
+    "    )\n",
+    "\n",
+    "    expl = relations[\"Explanation\"][1]\n",
+    "    print(text[expl.left.start:expl.right.end])\n",
+    "\n",
+    "    statement =rule.generate_statement(text, expl, verbose=True)\n",
+    "    print(\"\\nRESULT:\")\n",
+    "    if statement is not None:\n",
+    "        print(json.dumps(statement._asdict(), indent=2))"
+   ]
   }
  ],
  "metadata": {
