--- a/project/explanation_08.ipynb
+++ b/project/explanation_08.ipynb
@@ -59,19 +59,14 @@
    },
    "outputs": [],
    "source": [
-    "class RuleExplanation05(rule_base.Rule):\n",
-    "    name = \"explanation_05\"\n",
+    "class RuleExplanation08(rule_base.Rule):\n",
+    "    name = \"explanation_08\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
-    "        \"COMMON_PATTERN_-_EXPLANATION->CONDITION\": \n",
+    "        \"COMMON_PATTERN_-_ELABORATION\": \n",
     "            defs.Reason(\n",
     "                1,\n",
-    "                \"Common pattern ( -Explanation->Condition).\"\n",
-    "            ),\n",
-    "        \"COMMON_PATTERN_CONDITION_EXPLANATION\": \n",
-    "            defs.Reason(\n",
-    "                2,\n",
-    "                \"Common pattern (Condition-Explanation).\"\n",
+    "                \"Common pattern ( -Elaboration).\"\n",
     "            )\n",
     "    }\n",
     "    \n",
@@ -98,20 +93,9 @@
     "            \n",
     "        reason = None\n",
     "        \n",
-    "        assert info.satellite_info.relation is not None\n",
     "        if info.nucleus_info.relation is None:\n",
-    "            if (\n",
-    "                info.satellite_info.relation.type == \"Explanation\"\n",
-    "                    and info.sn_relation is not None\n",
-    "                    and info.sn_relation.type == \"Condition\"\n",
-    "            ):\n",
-    "                reason = self.reasons[\"COMMON_PATTERN_-_EXPLANATION->CONDITION\"]\n",
-    "        else:\n",
-    "            if (\n",
-    "                info.nucleus_info.relation.type == \"Condition\"\n",
-    "                    and info.satellite_info.relation.type == \"Explanation\"\n",
-    "            ):\n",
-    "                reason = self.reasons[\"COMMON_PATTERN_CONDITION_EXPLANATION\"]\n",
+    "            if info.satellite_info.relation.type == \"Elaboration\":\n",
+    "                reason = self.reasons[\"COMMON_PATTERN_-_ELABORATION\"]\n",
     "\n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
@@ -122,7 +106,7 @@
     "            )\n",
     "            return self._generate_statement(\n",
     "                final_nucleus_text, \n",
-    "                \" but \", \n",
+    "                \" then \", \n",
     "                final_sn_text, \n",
     "                relation, \n",
     "                info.nucleus_proximity.value,\n",
@@ -145,74 +129,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If you get into the forest with your friends , stay with them always .  If you do n't , you may get lost .  If you really get lost , this is what you should do .  Sit down and stay where you are .  \n",
+      "I do n't want that kind of life , \" Ma said .  After her story became known , many French student sent money to her .  Ma 's dream is the same as ever .  She hopes to go to Tsinghua University and become a reporter .  \" Then , I can find poor kids like me and help them , \" she said .  \n",
       "Nucleus is on the left.\n",
       "Nucleus's depth <= 100.\n",
-      "Nucleus's left subsegment is not nucleus.\n",
+      "Parsing result:\n",
+      "(ROOT\n",
+      "  (S\n",
+      "    (S\n",
+      "      (NP (PRP I))\n",
+      "      (VP (VBP do) (RB n't)\n",
+      "        (VP (VB want)\n",
+      "          (NP\n",
+      "            (NP (DT that) (NN kind))\n",
+      "            (PP (IN of)\n",
+      "              (NP (NN life)))))))\n",
+      "    (, ,) ('' '')\n",
+      "    (NP (NNP Ma))\n",
+      "    (VP (VBD said))\n",
+      "    (. .)))\n",
+      "\n",
+      "Constituencies:\n",
+      "    type  start  end  depth\n",
+      "0    PRP      0    1      4\n",
+      "1     NP      0    1      3\n",
+      "2    VBP      1    2      4\n",
+      "3     RB      2    3      4\n",
+      "4     VB      3    4      5\n",
+      "5     DT      4    5      7\n",
+      "6     NN      5    6      7\n",
+      "7     NP      4    6      6\n",
+      "8     IN      6    7      7\n",
+      "9     NN      7    8      8\n",
+      "10    NP      7    8      7\n",
+      "11    PP      6    8      6\n",
+      "12    NP      4    8      5\n",
+      "13    VP      3    8      4\n",
+      "14    VP      1    8      3\n",
+      "15     S      0    8      2\n",
+      "16     ,      8    9      2\n",
+      "17    ''      9   10      2\n",
+      "18   NNP     10   11      3\n",
+      "19    NP     10   11      2\n",
+      "20   VBD     11   12      3\n",
+      "21    VP     11   12      2\n",
+      "22     .     12   13      2\n",
+      "23     S      0   13      1\n",
+      "24  ROOT      0   13      0\n",
+      "\n",
+      "Sentence starts at 1314.\n",
+      "Boundaries: (0, 10, 10, 13)\n",
+      "Left and right VP boundaries: (1, 8), (11, 12)\n",
+      "Umbrella VPs:\n",
+      "Empty DataFrame\n",
+      "Columns: [type, start, end, depth]\n",
+      "Index: []\n",
+      "Nucleus's (left) nucleus doesn't contain '.', '!', '?', or ';' but none of the other two conditions is met.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
       "Text extracted from the satellite:\n",
-      "If you do n't, you may get lost.  If you really get lost, this is what you should do.  Sit down and stay where you are.\n",
-      "Nucleus relation type: 'Condition'.\n",
+      "After her story became known, many French student sent money to her.  Ma's dream is the same as ever.  She hopes to go to Tsinghua University and become a reporter.  \" Then, I can find poor kids like me and help them, \" she said.\n",
+      "Nucleus relation type: 'Attribution'.\n",
       "Satellite relation type: 'Explanation'.\n",
-      "Common pattern (Condition-Explanation).\n",
-      "Taking the last sentence and resolving pronouns:\n",
-      "If you get into the forest with your friends, stay with them always. \n",
-      "---> \n",
-      "If you get into the forest with your friends, stay with them always.\n",
-      "Taking the first sentence and removing leading words:\n",
-      "-- syntactic parsing result\n",
-      " (ROOT\n",
-      "  (S\n",
-      "    (SBAR (IN If)\n",
-      "      (S\n",
-      "        (NP (PRP you))\n",
-      "        (VP (VBP do) (RB n't))))\n",
-      "    (, ,)\n",
-      "    (NP (PRP you))\n",
-      "    (VP (MD may)\n",
-      "      (VP (VB get)\n",
-      "        (VP (VBN lost))))\n",
-      "    (. .)))\n",
-      "No tokens before the first NP will be removed because the sentence starts with if/when/as or an imperative verb.\n",
-      "If you do n't, you may get lost.  If you really get lost, this is what you should do.  Sit down and stay where you are. \n",
-      "---> \n",
-      "If you do n't, you may get lost.\n",
       "\n",
-      "RESULT:\n",
-      "{\n",
-      "  \"statement_text\": \"If you get into the forest with your friends, stay with them always but if you do n't, you may get lost.\",\n",
-      "  \"nucleus\": \"If you get into the forest with your friends, stay with them always\",\n",
-      "  \"connective\": \" but \",\n",
-      "  \"satellite_nucleus\": \"if you do n't, you may get lost.\",\n",
-      "  \"left_boundary\": 0,\n",
-      "  \"right_boundary\": 198,\n",
-      "  \"split_point\": 72,\n",
-      "  \"nucleus_proximity\": \"near\",\n",
-      "  \"rule\": \"explanation_05\",\n",
-      "  \"reason\": [\n",
-      "    2,\n",
-      "    \"Common pattern (Condition-Explanation).\"\n",
-      "  ]\n",
-      "}\n"
+      "RESULT:\n"
      ]
     }
    ],
    "source": [
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
-    "    rule = RuleExplanation05()\n",
+    "    rule = RuleExplanation08()\n",
     "\n",
-    "    with open(\"../parsed/race/train/middle/6165.txt.tree\", \"rt\") as f:\n",
+    "    with open(\"../parsed/race/train/middle/7617.txt.tree\", \"rt\") as f:\n",
     "        tree_text = f.read()\n",
     "\n",
     "    text, relations = relation_extraction.read_relations(\n",
     "        tree_text.replace(\"<s>\", \"\").replace(\"<P>\", \"\")\n",
     "    )\n",
     "\n",
-    "    expl = relations[\"Explanation\"][1]\n",
+    "    expl = relations[\"Explanation\"][3]\n",
     "    print(text[expl.left.start:expl.right.end])\n",
     "\n",
     "    statement =rule.generate_statement(text, expl, verbose=True)\n",
