--- a/project/preparation.ipynb
+++ b/project/preparation.ipynb
@@ -28,11 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from aux import nlp"
+    "from aux import nlp\n",
+    "from aux import utils"
    ]
   },
   {
@@ -83,7 +86,7 @@
     "    NEAR = \"near\"\n",
     "    FAR = \"far\"\n",
     "    NA = \"n/a\"\n",
-    "    \n",
+    "\n",
     "    \n",
     "class RelationInfo:\n",
     "    def __init__(self, nucleus_info, satellite_info):\n",
@@ -216,7 +219,9 @@
     "                else:\n",
     "                    case = TextExtractor.Case.STOP_IN_N\n",
     "\n",
-    "        print_if_verbose(TextExtractor.messages[case].format(relation_part_info.name), verbose)\n",
+    "        print_if_verbose(\n",
+    "            TextExtractor.messages[case].format(relation_part_info.name), verbose\n",
+    "        )\n",
     "        if case in {\n",
     "            TextExtractor.Case.NO_STOP_IN_N_WH_WORD,\n",
     "            TextExtractor.Case.NO_STOP_IN_N_AND  \n",
@@ -257,7 +262,7 @@
     "        nucleus_proximity, \n",
     "        sn_relation, \n",
     "        sn_segment,\n",
-    "        satellite_preparation_result,\n",
+    "        satellite_preparation_result\n",
     "    ):\n",
     "        RelationInfo.__init__(self, rel_info.nucleus_info, rel_info.satellite_info)\n",
     "        self.nucleus_preparation_result = nucleus_preparation_result\n",
@@ -273,7 +278,7 @@
     "        [\"preparation_result\", \"sn_relation\", \"sn_segment\", \"nucleus_proximity\"]\n",
     "    )\n",
     "    \n",
-    "    MAX_DEPTH = 3\n",
+    "    MAX_DEPTH = 100\n",
     "    \n",
     "    def search_segment(text, relation, direction, verbose=False):\n",
     "        assert relation is not None\n",
@@ -283,7 +288,7 @@
     "            child, segment = relation.right_child, relation.right\n",
     "        print_if_verbose(text[segment.start:segment.end], verbose)\n",
     "        if child:\n",
-    "            return search_segment(\n",
+    "            return Preprocessor.search_segment(\n",
     "                text, \n",
     "                child, \n",
     "                direction\n",
@@ -363,7 +368,7 @@
     "    def handle_satellite(text, satellite_info, nucleus_direction, verbose):\n",
     "        if satellite_info.relation is None:\n",
     "            print_if_verbose(\n",
-    "                f\"Satellite doesn't have any nested relations.\"\n",
+    "                f\"Satellite doesn't have any nested relations.\", verbose\n",
     "            )\n",
     "            sn_relation, sn_segment = None, None\n",
     "            nucleus_proximity = None\n",
@@ -472,6 +477,40 @@
     "                    satellite_preparation_result=\\\n",
     "                        satellite_handling_result.preparation_result\n",
     "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def finalise_nucleus_text(nucleus_text, verbose=False):\n",
+    "    processed_nucleus_text = nlp.take_last_sentence_and_resolve_pronouns(\n",
+    "        nucleus_text, verbose\n",
+    "    )\n",
+    "    if processed_nucleus_text is None:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return utils.remove_trailing_punctuation(\n",
+    "            utils.uppercase_first_letter(\n",
+    "                processed_nucleus_text\n",
+    "            )\n",
+    "        )\n",
+    "    \n",
+    "    \n",
+    "def finalise_satellite_nucleus_text(sn_text, verbose=False):\n",
+    "    processed_sn_text = nlp.take_first_sentence_and_remove_leading_words(\n",
+    "        sn_text, verbose\n",
+    "    )\n",
+    "    if processed_sn_text is None:\n",
+    "        return None\n",
+    "    else:\n",
+    "        return utils.lowercase_first_letter(\n",
+    "            processed_sn_text\n",
+    "        )"
    ]
   },
   {
