--- a/project/explanation_06.ipynb
+++ b/project/explanation_06.ipynb
@@ -36,7 +36,8 @@
       "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
       "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
-      "importing Jupyter notebook from preparation.ipynb\n"
+      "importing Jupyter notebook from preparation.ipynb\n",
+      "importing Jupyter notebook from rule_base.ipynb\n"
      ]
     }
    ],
@@ -46,7 +47,8 @@
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
     "from aux import defs\n",
-    "import preparation"
+    "import preparation\n",
+    "import rule_base"
    ]
   },
   {
@@ -57,69 +59,7 @@
    },
    "outputs": [],
    "source": [
-    "def is_background(relation):\n",
-    "    return relation is not None and relation.type == \"Background\"\n",
-    "\n",
-    "\n",
-    "def has_nested_background(relation):\n",
-    "    return (\n",
-    "        relation is not None\n",
-    "        and\n",
-    "        (\n",
-    "            is_background(relation.left_child)\n",
-    "            or is_background(relation.right_child)\n",
-    "            or has_nested_background(relation.left_child)\n",
-    "            or has_nested_background(relation.right_child)\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def test__has_nested_background():\n",
-    "    r010 = relation_extraction.Relation(\"Background\", None, None, None, None)\n",
-    "    r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
-    "    r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "    r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
-    "\n",
-    "    assert has_nested_background(r0)\n",
-    "\n",
-    "    r010 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
-    "    r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "    r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
-    "\n",
-    "    assert has_nested_background(r0) is False\n",
-    "\n",
-    "    r010 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "    r01  = relation_extraction.Relation(\"Background\", None, None, r010, r011)\n",
-    "    r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "    r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
-    "\n",
-    "    assert has_nested_background(r0)\n",
-    "\n",
-    "    assert has_nested_background(None) is False\n",
-    "    \n",
-    "    \n",
-    "test__has_nested_background()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class RuleExplanation06(defs.Rule):\n",
+    "class RuleExplanation06(rule_base.Rule):\n",
     "    name = \"explanation_06\"\n",
     "    relation_type = \"Explanation\"\n",
     "    reasons = {\n",
@@ -135,7 +75,7 @@
     "            )\n",
     "    }\n",
     "    \n",
-    "    def generate_statement(self, text, relation, verbose=False):\n",
+    "    def generate_statement(self, text, relation, verbose=False, **kwargs):\n",
     "        assert(relation is not None and relation.type == \"Explanation\")\n",
     "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
@@ -162,38 +102,31 @@
     "        if info.nucleus_info.relation is None:\n",
     "            if (\n",
     "                info.satellite_info.relation.type == \"Elaboration\"\n",
-    "                    and has_nested_background(info.satellite_info.relation)\n",
+    "                    and utils.has_nested_background(info.satellite_info.relation)\n",
     "            ):\n",
     "                reason = self.reasons[\"COMMON_PATTERN_-_ELABORATION->>BACKGROUND\"]\n",
     "            elif (\n",
     "                info.satellite_info.relation.type == \"Joint\"\n",
-    "                    and has_nested_background(info.satellite_info.relation)\n",
+    "                    and utils.has_nested_background(info.satellite_info.relation)\n",
     "            ):\n",
     "                reason = self.reasons[\"COMMON_PATTERN_-_JOINT->>BACKGROUND\"]\n",
     "\n",
     "        if reason is not None:\n",
     "            utils.print_if_verbose(reason.explanation, verbose)\n",
-    "            \n",
-    "            prepared_nucleus_text = utils.remove_trailing_punctuation(\n",
-    "                utils.uppercase_first_letter(info.nucleus_preparation_result.prepared_text)\n",
+    "            final_nucleus_text, final_sn_text = self._finalise_statement_parts(\n",
+    "                info.nucleus_preparation_result.prepared_text,\n",
+    "                info.satellite_preparation_result.prepared_text,\n",
+    "                verbose\n",
     "            )\n",
-    "            processed_s_text = nlp.remove_leading_words(\n",
-    "                info.satellite_preparation_result.prepared_text, verbose\n",
-    "            )\n",
-    "            prepared_s_text = utils.lowercase_first_letter(\n",
-    "                processed_s_text if processed_s_text is not None \n",
-    "                    else info.satellite_preparation_result.prepared_text\n",
-    "            )\n",
-    "            statement_text = f\"{prepared_nucleus_text}. Also, {prepared_s_text}\"\n",
-    "            return defs.Statement(\n",
-    "                statement_text=statement_text,\n",
-    "                nucleus=prepared_nucleus_text,\n",
-    "                satellite_nucleus=prepared_s_text,\n",
-    "                left_boundary=relation.left.start,\n",
-    "                right_boundary=relation.right.end,\n",
-    "                nucleus_proximity=info.nucleus_proximity.value,\n",
-    "                rule=self.name,\n",
-    "                reason=reason\n",
+    "            return self._generate_statement(\n",
+    "                final_nucleus_text, \n",
+    "                \". Also, \", \n",
+    "                final_sn_text, \n",
+    "                relation, \n",
+    "                info.nucleus_proximity.value,\n",
+    "                self.name,\n",
+    "                reason,\n",
+    "                verbose\n",
     "            )\n",
     "        else:\n",
     "            return None"
@@ -201,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -212,7 +145,7 @@
      "text": [
       "You can give your parents a happy day with a card or a joke .  It 's also lovely when a kid cleans up his or her room without being asked .  And if you try not fight with your brothers or sisters , your parents will be so happy .  Do your best at whatever you do .  \n",
       "Nucleus is on the left.\n",
-      "Nucleus's depth <= 3.\n",
+      "Nucleus's depth <= 100.\n",
       "Nucleus is flat.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
@@ -224,7 +157,11 @@
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Joint'.\n",
       "Common pattern ( -Joint->>Background).\n",
-      "Removing tokens before the first NP:\n",
+      "Taking the last sentence and resolving pronouns:\n",
+      "You can give your parents a happy day with a card or a joke. \n",
+      "---> \n",
+      "You can give your parents a happy day with a card or a joke.\n",
+      "Taking the first sentence and removing leading words:\n",
       "-- syntactic parsing result\n",
       " (ROOT\n",
       "  (S\n",
@@ -251,15 +188,17 @@
       "    (. .)))\n",
       "It's also lovely when a kid cleans up his or her room without being asked.  And if you try not fight with your brothers or sisters, your parents will be so happy.  Do your best at whatever you do. \n",
       "---> \n",
-      "It 's also lovely when a kid cleans up his or her room without being asked. And if you try not fight with your brothers or sisters, your parents will be so happy. Do your best at whatever you do.\n",
+      "It's also lovely when a kid cleans up his or her room without being asked.\n",
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"You can give your parents a happy day with a card or a joke. Also, it 's also lovely when a kid cleans up his or her room without being asked. And if you try not fight with your brothers or sisters, your parents will be so happy. Do your best at whatever you do.\",\n",
+      "  \"statement_text\": \"You can give your parents a happy day with a card or a joke. Also, it's also lovely when a kid cleans up his or her room without being asked.\",\n",
       "  \"nucleus\": \"You can give your parents a happy day with a card or a joke\",\n",
-      "  \"satellite_nucleus\": \"it 's also lovely when a kid cleans up his or her room without being asked. And if you try not fight with your brothers or sisters, your parents will be so happy. Do your best at whatever you do.\",\n",
+      "  \"connective\": \". Also, \",\n",
+      "  \"satellite_nucleus\": \"it's also lovely when a kid cleans up his or her room without being asked.\",\n",
       "  \"left_boundary\": 649,\n",
       "  \"right_boundary\": 915,\n",
+      "  \"split_point\": 712,\n",
       "  \"nucleus_proximity\": \"near\",\n",
       "  \"rule\": \"explanation_06\",\n",
       "  \"reason\": [\n",
